--- a/packages/shell/index.html
+++ b/packages/shell/index.html
@@ -44,9 +44,9 @@
             <a href="#/todos">Todos</a>
             <a href="#/contacts">Contacts</a>
         </div>
-        <iframe is="micro-front" app-id="todos"></iframe>
-        <iframe is="micro-front" app-id="contacts"></iframe>
-        <iframe is="micro-front" app-id="flickr"></iframe>
+        <iframe id="todos-app" is="micro-front" app-id="todos"></iframe>
+        <iframe id="contacts-app" is="micro-front" app-id="contacts"></iframe>
+        <iframe id="flickr-app" is="micro-front" app-id="flickr"></iframe>
     </div>
 </body>
 
