Make links visible

--- a/packages/shell/index.html
+++ b/packages/shell/index.html
@@ -32,7 +32,15 @@
             flex-grow: 1;
             height: 100%;
             border: none;
+            }
+
+        a {
+            color: white;
         }
+        a:visited {
+            color: lightblue;
+        }
+
     </style>
     <script type="module" src="index.js"></script>
 </head>
